# Scripts-collection

./: README.md
.github/workflows/: python-ci.yml
Powershell/: README.md  docker_janitor.ps1  domain_checker.ps1  service_checker.ps1  watchdog.ps1
bash/: README.MD  docker_janitor.sh  health_check.sh  net_diag.sh  ports_check.sh  ssl_expiry_checker.sh
python/: .gitignore  README.md  pyproject.toml
python/config/: example.yaml
python/src/devops_toolkit/commands/: azure.py  dns.py  github.py  k8s.py
python/src/devops_toolkit/services/: azure_service.py  dns_service.py  github_service.py  k8s_service.py
python/tests/: test_azure.py  test_dns.py  test_github.py  test_k8s.py
