[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-toolkit"
version = "0.1.0"
description = "Python Automation Toolkit for Operations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "kubernetes>=28.1.0",
    "azure-identity>=1.15.0",
    "azure-mgmt-costmanagement>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "responses>=0.23.0"
]

[project.scripts]
dns-cert-monitor = "devops_toolkit.commands.dns:app"
github-repo-auditor = "devops_toolkit.commands.github:app"
k8s-health-checker = "devops_toolkit.commands.k8s:app"
azure-cost-reporter = "devops_toolkit.commands.azure:app"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "--cov=src/devops_toolkit --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "src/devops_toolkit/commands/*",
    "src/devops_toolkit/__init__.py"
]